--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.actor }}/${{ github.repository }}
+  IMAGE_NAME: ${{ github.actor }}/dnsmasq
 
 jobs:
   build-and-push-image:
